ISSUE #602 - Fix job not being set correctly for new issues, also firefox overflow

--- a/frontend/components/issues/css/issues.css
+++ b/frontend/components/issues/css/issues.css
@@ -184,6 +184,7 @@ issues-list .issueListItem div:first-child {
 issues-list #issuesListItemContent {
   padding: 10px;
   padding-right: 40px;
+  overflow: hidden;  
 }
 
 issues-list #issuesListItemTitle {
